--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 rocket = "0.5.1"
 tokio = { version = "1.40.0", features = ["full"] }
+sqlx = { version = "0.8", features = [ "runtime-tokio", "mysql" ] }
 
 aes-gcm = "0.10.3"
 sha2 = "0.10.8"
