--- a/Rocket.toml
+++ b/Rocket.toml
@@ -5,3 +5,9 @@ workers = 16
 log_level = "critical"
 cli_colors = false
 ident = "FileStorageService"
+
+[default.limits]
+form = "64 kB"
+json = "1 MiB"
+msgpack = "2 MiB"
+"file/jpg" = "50 MiB"
