--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rocket = "0.5.1"
+rocket = { version = "0.5.1", features = ["json"]}
 tokio = { version = "1.40.0", features = ["full"] }
 sqlx = { version = "0.8", features = [ "runtime-tokio", "mysql" ] }
 
@@ -16,3 +16,4 @@ pbkdf2 = "0.12.2"
 log = "0.4.22"
 env_logger = "0.11.5"
 chrono = "0.4.38"
+serde = { version = "1.0.210", features = ["derive"] }
