--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ description = "This is the file storage service for the LockBox microservice pro
 rocket = { version = "0.5.1", features = ["json"]}
 tokio = { version = "1.40.0", features = ["full"] }
 sqlx = { version = "0.8", features = [ "runtime-tokio", "mysql" ] }
+lapin = "2.5.3"
 
 aes-gcm = "0.10.3"
 sha2 = "0.10.8"
