--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,5 @@ log = "0.4.22"
 env_logger = "0.11.5"
 chrono = "0.4.38"
 serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.140"
 dotenv = "0.15.0"
