--- a/compose.yaml
+++ b/compose.yaml
@@ -3,6 +3,9 @@ services:
     build: .
     ports:
       - "8080:8080"
+    environment:
+      - DATABASE_URL="mysql://root:password@file-db/file-db"
+      - RABBIT_ADDRESS="amqp://guest:guest@rabbit-mq:5672"
     depends_on:
       file-db:
         condition: service_healthy
@@ -23,6 +26,15 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+
+  rabbit-mq:
+    image: rabbitmq:4.0-management
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
 
 volumes:
   db_data:
